--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
             <h1>Contact</h1>
             <ul>
               <li><a href="acceuil.html">Accueil</a></li>
-              <li><a href="">L'équipe</a></li>
+              <li><a href="equipe.html">L'équipe</a></li>
               <li><a class="active" href="contact.html">Contact</a></li>
               <li><a href="photos.html">+Photos</a></li>
             </ul>
