--- a/photos.html
+++ b/photos.html
@@ -11,7 +11,7 @@
             <h1>Photos Supplémentaire</h1>
             <ul>
               <li><a href="acceuil.html">Accueil</a></li>
-              <li><a href="">L'équipe</a></li>
+              <li><a href="equipe.html">L'équipe</a></li>
               <li><a href="contact.html">Contact</a></li>
               <li><a class="active" href="photos.html">+Photos</a></li>
             </ul>
